// MedBase Database Schema
// Import this file into dbdiagram.io

// ===================
// THIRD PARTIES
// ===================

Table third_parties {
  id int [pk, increment]
  code varchar [unique, not null, note: 'auto-generated unique identifier']
  name varchar [not null]
  phone varchar
  email varchar
  is_active boolean [default: true, not null]
  is_deleted boolean [default: false, not null]
  created_by varchar
  created_at timestamp [default: `now()`, not null]
  updated_by varchar
  updated_at timestamp [default: `now()`, not null]
}

// ===================
// USERS & AUTH
// ===================

Table users {
  id int [pk, increment]
  third_party_id int [ref: > third_parties.id, not null]
  username varchar [unique, not null]
  password_hash varchar [not null]
  role varchar [not null, default: 'user', note: 'admin, user']
  is_active boolean [default: true, not null]
  is_deleted boolean [default: false, not null]
  created_by varchar
  created_at timestamp [default: `now()`, not null]
  updated_by varchar
  updated_at timestamp [default: `now()`, not null]
}

// ===================
// INVENTORY
// ===================

Table medicine_categories {
  id int [pk, increment]
  name varchar [unique, not null]
  description text
  is_deleted boolean [default: false, not null]
  created_by varchar
  created_at timestamp [default: `now()`, not null]
  updated_by varchar
  updated_at timestamp [default: `now()`, not null]
}

Table equipment_categories {
  id int [pk, increment]
  name varchar [unique, not null]
  description text
  is_deleted boolean [default: false, not null]
  created_by varchar
  created_at timestamp [default: `now()`, not null]
  updated_by varchar
  updated_at timestamp [default: `now()`, not null]
}

Table medical_device_categories {
  id int [pk, increment]
  name varchar [unique, not null]
  description text
  is_deleted boolean [default: false, not null]
  created_by varchar
  created_at timestamp [default: `now()`, not null]
  updated_by varchar
  updated_at timestamp [default: `now()`, not null]
}

Table items {
  id int [pk, increment]
  item_type varchar [not null, note: 'medicine, equipment, medical_device']
  name varchar [unique, not null]
  is_deleted boolean [default: false, not null]
  created_by varchar
  created_at timestamp [default: `now()`, not null]
  updated_by varchar
  updated_at timestamp [default: `now()`, not null]

  Note: 'Parent table for all inventory items. Each medicine, equipment, or medical device has a corresponding item record.'
}

Table medicines {
  id int [pk, increment]
  item_id int [ref: > items.id, unique, not null]
  code varchar [unique, not null, note: 'user-provided unique identifier']
  name varchar [unique, not null]
  category_id int [ref: > medicine_categories.id]
  description text
  unit varchar [note: 'tablets, ml, mg, etc.']
  is_active boolean [default: true, not null]
  is_deleted boolean [default: false, not null]
  created_by varchar
  created_at timestamp [default: `now()`, not null]
  updated_by varchar
  updated_at timestamp [default: `now()`, not null]
}

Table equipment {
  id int [pk, increment]
  item_id int [ref: > items.id, unique, not null]
  code varchar [unique, not null, note: 'user-provided unique identifier']
  name varchar [unique, not null]
  category_id int [ref: > equipment_categories.id]
  description text
  condition varchar [note: 'new, good, fair, poor']
  is_active boolean [default: true, not null]
  is_deleted boolean [default: false, not null]
  created_by varchar
  created_at timestamp [default: `now()`, not null]
  updated_by varchar
  updated_at timestamp [default: `now()`, not null]
}

Table medical_devices {
  id int [pk, increment]
  item_id int [ref: > items.id, unique, not null]
  code varchar [unique, not null, note: 'user-provided unique identifier']
  name varchar [unique, not null]
  category_id int [ref: > medical_device_categories.id]
  description text
  serial_number varchar
  is_active boolean [default: true, not null]
  is_deleted boolean [default: false, not null]
  created_by varchar
  created_at timestamp [default: `now()`, not null]
  updated_by varchar
  updated_at timestamp [default: `now()`, not null]
}

Table inventory {
  id int [pk, increment]
  item_id int [ref: > items.id, unique, not null]
  quantity int [not null, default: 0]
  is_deleted boolean [default: false, not null]
  created_by varchar
  created_at timestamp [default: `now()`, not null]
  updated_by varchar
  updated_at timestamp [default: `now()`, not null]
}

Table inventory_transactions {
  id int [pk, increment]
  transaction_type varchar [not null, note: 'purchase, donation, prescription, loss, breakage, expiration, destruction']
  third_party_id int [ref: > third_parties.id, not null, note: 'donor for donations, doctor for prescriptions, user for other types']
  appointment_id int [ref: > appointments.id, note: 'optional link to appointment']
  transaction_date date [not null]
  notes text
  is_deleted boolean [default: false, not null]
  created_by varchar
  created_at timestamp [default: `now()`, not null]
  updated_by varchar
  updated_at timestamp [default: `now()`, not null]
}

Table inventory_transaction_items {
  id int [pk, increment]
  transaction_id int [ref: > inventory_transactions.id, not null]
  item_id int [ref: > items.id, not null]
  quantity int [not null]
  is_deleted boolean [default: false, not null]
  created_by varchar
  created_at timestamp [default: `now()`, not null]
  updated_by varchar
  updated_at timestamp [default: `now()`, not null]
}

// ===================
// DOCTORS
// ===================

Table doctors {
  id int [pk, increment]
  third_party_id int [ref: > third_parties.id, not null]
  specialization varchar
  type varchar [not null, note: 'internal, external, partner_provided']
  partner_id int [ref: > partners.id]
  is_active boolean [default: true, not null]
  is_deleted boolean [default: false, not null]
  created_by varchar
  created_at timestamp [default: `now()`, not null]
  updated_by varchar
  updated_at timestamp [default: `now()`, not null]
}

// ===================
// PARTNERS
// ===================

Table partners {
  id int [pk, increment]
  third_party_id int [ref: > third_parties.id, not null]
  partner_type varchar [not null, note: 'donor, referral, both']
  organization_type varchar [note: 'NGO, organization, individual, hospital, medical_center']
  contact_person varchar
  address text
  is_active boolean [default: true, not null]
  is_deleted boolean [default: false, not null]
  created_by varchar
  created_at timestamp [default: `now()`, not null]
  updated_by varchar
  updated_at timestamp [default: `now()`, not null]
}

// ===================
// PATIENTS
// ===================

Table patients {
  id int [pk, increment]
  third_party_id int [ref: > third_parties.id, not null]
  date_of_birth date
  gender varchar
  address text
  emergency_contact varchar
  emergency_phone varchar
  is_active boolean [default: true, not null]
  is_deleted boolean [default: false, not null]
  created_by varchar
  created_at timestamp [default: `now()`, not null]
  updated_by varchar
  updated_at timestamp [default: `now()`, not null]
}

Table patient_documents {
  id int [pk, increment]
  patient_id int [ref: > patients.id, not null]
  document_name varchar [not null]
  document_type varchar
  file_path varchar [not null]
  upload_date timestamp [default: `now()`, not null]
  is_deleted boolean [default: false, not null]
  created_by varchar
  created_at timestamp [default: `now()`, not null]
  updated_by varchar
  updated_at timestamp [default: `now()`, not null]
}

// ===================
// APPOINTMENTS & MEDICAL RECORDS
// ===================

Table appointments {
  id int [pk, increment]
  code varchar [unique, not null, note: 'auto-generated unique identifier']
  patient_id int [ref: > patients.id, not null]
  doctor_id int [ref: > doctors.id]
  partner_id int [ref: > partners.id, note: 'for external appointments']
  appointment_date timestamp [not null]
  status varchar [not null, default: 'scheduled', note: 'scheduled, in_progress, completed, cancelled']
  type varchar [not null, note: 'scheduled, walk_in']
  location varchar [not null, default: 'internal', note: 'internal, external']
  notes text
  is_deleted boolean [default: false, not null]
  created_by varchar
  created_at timestamp [default: `now()`, not null]
  updated_by varchar
  updated_at timestamp [default: `now()`, not null]
}

Table vital_signs {
  id int [pk, increment]
  appointment_id int [ref: > appointments.id, not null]
  blood_pressure_systolic int
  blood_pressure_diastolic int
  heart_rate int
  temperature numeric(5,2)
  respiratory_rate int
  weight numeric(6,2)
  height numeric(5,2)
  notes text
  is_deleted boolean [default: false, not null]
  created_by varchar
  created_at timestamp [default: `now()`, not null]
  updated_by varchar
  updated_at timestamp [default: `now()`, not null]
}

Table medical_records {
  id int [pk, increment]
  appointment_id int [ref: > appointments.id, not null]
  chief_complaint text
  diagnosis text
  treatment_notes text
  follow_up_date date
  is_deleted boolean [default: false, not null]
  created_by varchar
  created_at timestamp [default: `now()`, not null]
  updated_by varchar
  updated_at timestamp [default: `now()`, not null]
}

// ===================
// TREATMENTS (External)
// ===================

Table treatments {
  id int [pk, increment]
  patient_id int [ref: > patients.id, not null]
  appointment_id int [ref: > appointments.id]
  partner_id int [ref: > partners.id, not null]
  treatment_type varchar [not null]
  description text
  treatment_date date
  status varchar [not null, default: 'pending', note: 'pending, in_progress, completed, cancelled']
  cost numeric(12,2)
  notes text
  is_deleted boolean [default: false, not null]
  created_by varchar
  created_at timestamp [default: `now()`, not null]
  updated_by varchar
  updated_at timestamp [default: `now()`, not null]
}
